[tool.poetry]
name = "mangapy"
version = "0.1.0"
description = "Manga server in python"
authors = ["Brian Maurer <bmaurer@xvicario.us>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.12"
flask_restful = "^0.3.7"
flask_sqlalchemy = "^2.4.1"
watchdog = "^0.9.0"
python-magic = "^0.4.15"
progress = "^1.5"

[tool.poetry.dev-dependencies]
nitpick = "^0.21.3"
jedi = "^0.15.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
